# azure_with_agents_demo_mcp

./: .env.example  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: azure-deploy-oidc.yml.inactive  azure-deploy-publish-profile.yml
app/: main.py
app/agents/: tools.py
app/api/v1/: documents.py  router.py
app/db/: __init__.py  models.py  session.py
